name:           yi
version:        0.14
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

executable yi
  main-is: Main.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -ferror-spans -threaded
  build-depends:
      base >=4.8 && <5
    , microlens-platform
    , mtl
    , process >=1.6
    , text >=1.2
    , transformers-base >=0.4
    , yi-core         >=0.14
    , yi-frontend-vty >=0.14
    , yi-keymap-vim   >=0.14
    , yi-language     >=0.14
    , yi-misc-modes   >=0.14
    , yi-mode-haskell >=0.14
    , yi-rope >=0.9
  default-language: Haskell2010
