name:           yi
version:        0.14
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

executable yi
  main-is: Main.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -ferror-spans -threaded
  build-depends:
      base >=4.8 && <5
    , microlens-platform >=0.3 && <0.4
    , mtl >=2.2 && <2.3
    , process >=1.6 && <1.7
    , text >=1.2 && <1.3
    , transformers-base >=0.4 && <0.5
    , yi-core         >=0.14 && <0.15
    , yi-frontend-vty >=0.14 && <0.15
    , yi-fuzzy-open   >=0.14 && <0.15
    , yi-keymap-vim   >=0.14 && <0.15
    , yi-language     >=0.14 && <0.15
    , yi-misc-modes   >=0.14 && <0.15
    , yi-mode-haskell >=0.14 && <0.15
    , yi-rope >=0.9 && <1.0
  default-language: Haskell2010
